--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "axios": "0.19.2",
+    "email-validator": "2.0.4",
     "history": "4.10.1",
     "prop-types": "15.7.2",
     "react": "16.12.0",
